--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ h1{
 span{
     display: inline-block;
     background-color: #ccc;
-    width: 100px;
+    width: 150px;
     height: 20px;
     text-align: center;
     border-radius: 6px;
@@ -39,7 +39,7 @@ span{
 
 .opciones .palabra{
     display: inline-block;
-    background-color: aquamarine;
+    background-color: rgb(78, 174, 142);
     color: #fff;
     margin: 5px;
     padding: 2px 5px;
