--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ ul {
   
   .active-link{
     opacity: 0.5;
+    
   }
   
   .active-link::after{
@@ -152,6 +153,7 @@ span{
 
 .texto{
     max-width: 500px;
+    border-radius: 5px;
     margin: auto;
     border: 1px solid #ccc;
     padding: 5px;
@@ -160,6 +162,7 @@ span{
 
 .texto1{
     max-width: 600px;
+    border-radius: 5px;
     margin: auto;
     border: 1px solid #ccc;
     padding: 5px;
@@ -201,18 +204,113 @@ span{
     text-align: center;
 }
 
-button{
-    display: block;
-    margin: auto;
-    padding: 5px 10px;
-    background-color: aqua;
-    border: none;
-    color: #fff;
-    cursor: pointer;
+.ci{
+  display: flex;
+  flex-direction: column;
+ 
+
+}
+
+.actionBtn{
+  display: flex;
+  padding: 0.625em 1.875em;
+  border-radius: 0.313em;
+  text-decoration: none;
+  outline: none;
+  font-size: 1em;
+  font-weight: 500;
+  background: #59B374;
+  color: #fff;
+  cursor: pointer;
+  margin: 0 auto;
+  border: none;
+  margin-bottom: 15px;
+}
+
+
+.a {
+  display: flex;
+  padding: 0.625em 1.875em;
+  border-radius: 0.313em;
+  text-decoration: none;
+  outline: none;
+  font-size: 1em;
+  font-weight: 500;
+  background: #3b754c;
+  color: #fff;
+  cursor: pointer;
+  margin: 0 auto;
+  border: none;
+  justify-content: center;
+  width: 5em;
 }
 
 
 
+@media screen and (max-width: 992px) {
+
+ 
+
+  .nav__menu{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: translateX(-100%);
+    transition: 0.3s;
+  }
+
+  .show-menu{
+    transform: translateX(0);
+  }
+
+  .nav__list{
+    flex-direction: column;
+    row-gap: 2.125rem;
+    text-align: center;
+  }
+
+  .nav__toggle,
+  .nav__close{
+    display: block;
+  }
+
+  .nav__close{
+    font-size: 1.5rem;
+    position: absolute;
+    top: 2.7rem;
+    left: 8%;
+    cursor: pointer;
+    color: #000;
+  }
+
+  .nav__toggle{
+    color: #000;
+    margin: 20px;
+    font-size: 1.25rem;
+    opacity: 0.5;
+  }
+
+  .nav__link{
+    font-size: 1em;
+    color: #fff;
+ 
+  }
+
+  .active-link{
+    font-size: 1em;
+    color: #fff;
+    
+  }
+
+
+}
 
 
 
