--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,316 @@
-.preguntas{
-    display: flex;
-    flex-direction: column;
+body{
+    font-family: 'Verdana';
 }
 
-div{
-    padding: 1.5em;
+ul {
+    list-style: none;
+  }
+  
+  a {
+    text-decoration: none;
+  }
+  
+  
+  /*=============== Reusable Css ===============*/
+  
+  .container{
+    max-width: 1140px;
+    margin: 0 auto;
+    padding-left: 0.9rem;
+    padding-right: 0.9rem;
+  }
+
+/*=============== Header ===============*/
+
+.header{
+    /* display: flex; */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 100;
+    transition: 0.3s;
+    box-shadow: 0 5px 8px 0 rgb(0 0 0 / 14%);
+  }
+  
+  .nav{
+    height: calc(var( --header-height) + 0.875rem);
+    display: flex;
+    align-items: flex-end;
+  }
+  
+  .nav__list{
+    display: flex;
+    margin: 20px;
+    column-gap: 3.25rem;
+  }
+  
+  .nav__link{
+    color: #000;
+    font-size: 0.9rem;
+    font-weight: var(--bold);
+    font-family: var(--mono-font);
+    text-transform: uppercase;
+    position: relative;
+    transition: 0.3s;
+  }
+  
+  .nav__link:hover{
+    opacity: 0.5;
+  }
+  
+  .nav__link::after{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    right: -0.5rem;
+    width: 7px;
+    height: 2px;
+    background-color: #000;
+    opacity: 0;
+    transition: 0.3s;
+  }
+  
+  .nav__link:hover::after{
+    opacity: 1;
+  }
+  
+  .nav__close,
+  .nav__toggle{
+    display: none;
+  }
+  
+  /* Active Link */
+  
+  .active-link{
+    opacity: 0.5;
+    
+  }
+  
+  .active-link::after{
+    opacity: 1;
+  }
+
+
+h1{
+    text-align: center;
 }
+
+span{
+    display: inline-block;
+    background-color: #ccc;
+    width: 150px;
+    height: 20px;
+    text-align: center;
+    border-radius: 6px;
+    cursor: pointer;
+    line-height: 20px;
+}
+
+
+/*nivel 1*/
+.span1{
+    width: 2.5em;
+}
+
+.span2{
+    width: 1.5em;
+}
+
+.span3{
+    width: 4em;
+}
+
+/*nivel 2*/
+
+.span4{
+    width: 1.5em;
+} 
+
+.span5{
+    width: 1.2em;
+}
+
+.span6{
+    width: 4em;
+}
+
+/*nivel 3*/
+
+/*nivel4*/
+
+.span7{
+    width: 6.5em;
+}
+
+.span8{
+    width: 11em;
+}
+
+.container-juego{
+  margin-top: 5em;
+}
+
+.texto{
+    max-width: 500px;
+    border-radius: 5px;
+    margin: auto;
+    border: 1px solid #ccc;
+    padding: 5px;
+    background-color: rgb(244,244,244);
+}
+
+.texto1{
+    max-width: 600px;
+    border-radius: 5px;
+    margin: auto;
+    border: 1px solid #ccc;
+    padding: 5px;
+    background-color: rgb(244,244,244);
+}
+
+.texto p{
+    line-height: 28px;
+}
+
+.texto1 p{
+    line-height: 28px;
+}
+
+.opciones{
+    background-color: rgb(244,244,244);
+    max-width: 500px;
+    margin: 30px auto;
+    border: 1px solid #ccc;
+    min-height: 40px;
+}
+
+.opciones .palabra{
+    display: inline-block;
+    background-color: rgb(78, 174, 142);
+    color: #fff;
+    margin: 5px;
+    padding: 2px 5px;
+    border-radius: 6px;
+    cursor: pointer;
+}
+
+.opciones .palabra:hover{
+    background-color: #000;
+    color: #fff;
+}
+
+#resultado{
+    text-align: center;
+}
+
+.ci{
+  display: flex;
+  flex-direction: column;
+ 
+
+}
+
+.actionBtn{
+  display: flex;
+  padding: 0.625em 1.875em;
+  border-radius: 0.313em;
+  text-decoration: none;
+  outline: none;
+  font-size: 1em;
+  font-weight: 500;
+  background: #59B374;
+  color: #fff;
+  cursor: pointer;
+  margin: 0 auto;
+  border: none;
+  margin-bottom: 15px;
+}
+
+
+.a {
+  display: flex;
+  padding: 0.625em 1.875em;
+  border-radius: 0.313em;
+  text-decoration: none;
+  outline: none;
+  font-size: 1em;
+  font-weight: 500;
+  background: #3b754c;
+  color: #fff;
+  cursor: pointer;
+  margin: 0 auto;
+  border: none;
+  justify-content: center;
+  width: 5em;
+}
+
+
+
+@media screen and (max-width: 992px) {
+
+ 
+
+  .nav__menu{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: translateX(-100%);
+    transition: 0.3s;
+  }
+
+  .show-menu{
+    transform: translateX(0);
+  }
+
+  .nav__list{
+    flex-direction: column;
+    row-gap: 2.125rem;
+    text-align: center;
+  }
+
+  .nav__toggle,
+  .nav__close{
+    display: block;
+  }
+
+  .nav__close{
+    font-size: 1.5rem;
+    position: absolute;
+    top: 2.7rem;
+    left: 8%;
+    cursor: pointer;
+    color: #000;
+  }
+
+  .nav__toggle{
+    color: #000;
+    margin: 20px;
+    font-size: 1.25rem;
+    opacity: 0.5;
+  }
+
+  .nav__link{
+    font-size: 1em;
+    color: #fff;
+ 
+  }
+
+  .active-link{
+    font-size: 1em;
+    color: #fff;
+    
+  }
+
+
+}
+
+
 
